--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
-# This is a basic workflow to help you get started with Actions
 name: Build And Deploy To Aliyun ECS
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
@@ -19,12 +16,11 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-    # step：设置jdk版本
-      # step 名称
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      # step：设置jdk版本
       - name: set up JDK 1.8
         # 引用公共action
         uses: actions/setup-java@v1
@@ -32,7 +28,7 @@ jobs:
           # 设置参数
           java-version: 1.8
           
-      - name: SSH Server Deploy
+      - name: Deploy to aliyun server
         uses: kostya-ten/ssh-server-deploy@v4
         with:
           host: ${{ secrets.SSH_HOST }}
